--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
 
 h1 {
     color: #333;
+   
 }
 
 input[type="text"] {
@@ -44,6 +45,15 @@ li {
     margin: 5px 0;
     border: 1px solid #ddd;
     border-radius: 3px;
+    text-align:justify;
+}
+
+li:nth-child(even) {
+    background-color: #e6e6e6 ;
+}
+
+li:nth-child(odd) {
+    background-color: skyblue;
 }
 
 li span {
